tests/ui/pattern/rfc-3627-match-ergonomics-2024/experimental/ref-binding-on-inh-ref-errors.structural2024.stderr
error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:15:11
   |
LL |     let [&ref x] = &[&0];
   |           ^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &[&ref x] = &[&0];
   |         +

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:21:11
   |
LL |     let [&ref x] = &mut [&0];
   |           ^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &mut [&ref x] = &mut [&0];
   |         ++++

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:27:15
   |
LL |     let [&mut ref x] = &mut [&mut 0];
   |               ^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &mut [&mut ref x] = &mut [&mut 0];
   |         ++++

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:33:15
   |
LL |     let [&mut ref mut x] = &mut [&mut 0];
   |               ^^^^^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &mut [&mut ref mut x] = &mut [&mut 0];
   |         ++++

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:43:11
   |
LL |     let [&ref x] = &[&mut 0];
   |           ^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &[&ref x] = &[&mut 0];
   |         +

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:50:11
   |
LL |     let [&ref x] = &mut [&mut 0];
   |           ^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &mut [&ref x] = &mut [&mut 0];
   |         ++++

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:60:15
   |
LL |     let [&mut ref x] = &[&mut 0];
   |               ^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &[&mut ref x] = &[&mut 0];
   |         +

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:74:10
   |
LL |     let [ref mut x] = &[0];
   |          ^^^^^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &[ref mut x] = &[0];
   |         +

error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/ref-binding-on-inh-ref-errors.rs:74:10
   |
LL |     let [ref mut x] = &[0];
   |          ^^^^^^^^^ cannot borrow as mutable

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:83:10
   |
LL |     let [ref x] = &[0];
   |          ^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &[ref x] = &[0];
   |         +

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:88:10
   |
LL |     let [ref x] = &mut [0];
   |          ^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &mut [ref x] = &mut [0];
   |         ++++

error: this pattern relies on behavior which may change in edition 2024
  --> $DIR/ref-binding-on-inh-ref-errors.rs:93:10
   |
LL |     let [ref mut x] = &mut [0];
   |          ^^^^^^^ cannot override to bind by-reference when that is the implicit default
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/match-ergonomics.html>
help: make the implied reference pattern explicit
   |
LL |     let &mut [ref mut x] = &mut [0];
   |         ++++

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0596`.
